Added new feature

--- a/BMICalculator/Pages/bmi.cshtml
+++ b/BMICalculator/Pages/bmi.cshtml
@@ -44,6 +44,14 @@
                     @Html.DisplayNameFor(m => m.BMI.BMICategory)
                     @Html.DisplayFor(m => m.BMI.BMICategory)
                 </div>
+                <div>
+                    @Html.DisplayNameFor(m => m.BMI.BMIWeightMetric)
+                    @Html.DisplayFor(m => m.BMI.BMIWeightMetric)
+                </div>
+                <div>
+                    @Html.DisplayNameFor(m => m.BMI.BMIHeightMetric)
+                    @Html.DisplayFor(m => m.BMI.BMIHeightMetric)
+                </div>
             }
         </form>
     </div>
